--- a/certificates.html
+++ b/certificates.html
@@ -21,9 +21,9 @@
 
   <!-- Header -->
   <header class="shadow-md py-4 bg-white sticky top-0 z-50">
-    <div class="container mx-auto px-4 flex justify-between items-center">
+    <div class="max-w-7xl mx-auto px-4 flex flex-wrap justify-between items-center">
       <h1 class="text-2xl font-bold text-pink-700">Anshika Singh</h1>
-      <nav class="space-x-4 text-gray-700 font-medium">
+      <nav class="space-x-4 text-gray-700 font-medium text-sm sm:text-base mt-2 sm:mt-0">
         <a href="index.html" class="hover:text-pink-600">Home</a>
         <a href="techstack.html" class="hover:text-pink-600">Tech Stack</a>
         <a href="ml-projects.html" class="hover:text-pink-600">ML Projects</a>
@@ -35,127 +35,123 @@
   </header>
 
   <!-- Section Title -->
-  <section class="text-center py-16 bg-gradient-to-r from-pink-200 to-yellow-100">
-    <h2 class="text-4xl font-extrabold text-gray-900">Certificates & Achievements</h2>
-    <p class="mt-3 text-lg text-gray-700">Click any card to open the LinkedIn post associated with the certificate.</p>
+  <section class="text-center py-12 px-4 bg-gradient-to-r from-pink-200 to-yellow-100">
+    <h2 class="text-3xl md:text-4xl font-extrabold text-gray-900">Certificates & Achievements</h2>
+    <p class="mt-3 text-base md:text-lg text-gray-700 max-w-2xl mx-auto">Click any card to open the LinkedIn post associated with the certificate.</p>
   </section>
 
   <!-- Cards Grid -->
-  <section class="container mx-auto px-4 py-12 grid gap-10 md:grid-cols-2 lg:grid-cols-3">
+  <section class="max-w-7xl mx-auto px-4 py-12 grid gap-8 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
 
-    <!-- Card Template -->
-    <!-- Repeat for all cards below -->
+    <!-- CARD 1 -->
     <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_amazonml-girlsleadingtech-machinelearning-activity-7343451416197242880-RQUx?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-yellow-200 to-pink-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-graduation-cap text-3xl text-pink-700"></i>
         <h3 class="text-xl font-bold">AMAZON ML SUMMER COHORT BY GIRLS LEADING TECH </h3>
       </div>
-      <p class="text-sm">Selected for the Amazon ML Summer School Cohort 2025, organized by Girls Leading Tech.
-</p>
+      <p class="text-sm">Selected for the Amazon ML Summer School Cohort 2025, organized by Girls Leading Tech.</p>
     </a>
 
-    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_unstoptalentpark2025-continuouslearning-personalgrowth-activity-7321456474088460289-ZFdX?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
+    <!-- CARD 2 -->
+    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_unstoptalentpark2025-continuouslearning-personalgrowth-activity-7321456474088460289-ZFdX" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-green-200 to-yellow-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-code text-3xl text-green-700"></i>
         <h3 class="text-xl font-bold">UNSTOP TALENT PARK</h3>
       </div>
-      <p class="text-sm">successfully cleared Round 1 of Unstop Talent Park 2025! 🎉</p>
+      <p class="text-sm">Successfully cleared Round 1 of Unstop Talent Park 2025! 🎉</p>
     </a>
 
-    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_ssoc4-opensource-ssoc4-activity-7338527341880537088-4Cxf?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
+    <!-- CARD 3 -->
+    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_ssoc4-opensource-ssoc4-activity-7338527341880537088-4Cxf" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-blue-200 to-purple-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-trophy text-3xl text-purple-700"></i>
         <h3 class="text-xl font-bold">SOCIAL SUMMER OF CODE CONTRIBUTOR</h3>
       </div>
-      <p class="text-sm">incredible journey of open-source contribution with the Social Summer of Code — Season 4 🔁💻
-hashtag#SSOC4 </p>
-
+      <p class="text-sm">Open-source contribution with the Social Summer of Code — Season 4 🔁💻</p>
     </a>
 
-    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_generativeai-hack2skill-gratitude-activity-7283395840902078464-jfmZ?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
+    <!-- CARD 4 -->
+    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_generativeai-hack2skill-gratitude-activity-7283395840902078464-jfmZ" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-purple-200 to-indigo-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-users-four text-3xl text-indigo-700"></i>
-        <h3 class="text-xl font-bold">Hack2Skill Tech Camp: CERTIFICATION SCORED ABOVE 60%</h3>
+        <h3 class="text-xl font-bold">Hack2Skill Tech Camp</h3>
       </div>
-      <p class="text-sm">Hack2Skill Tech Camp: GenAI Christmas Edition 2024</p>
+      <p class="text-sm">GenAI Christmas Edition 2024 – Certification scored above 60%</p>
     </a>
 
-    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_machine-learning-coordinator-gdg-activity-7264913323123449856-EFK2?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
+    <!-- CARD 5 -->
+    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_machine-learning-coordinator-gdg-activity-7264913323123449856-EFK2" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-pink-300 to-red-200 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-brain text-3xl text-red-600"></i>
-        <h3 class="text-xl font-bold">Machine Learning Coordinator At GDG</h3>
+        <h3 class="text-xl font-bold">ML Coordinator at GDG</h3>
       </div>
-      <p class="text-sm">Selected for Machine Learning Coordinatot Google Developer- USAR(GGSIPU).</p>
+      <p class="text-sm">Selected as Machine Learning Coordinator at GDG, USAR (GGSIPU).</p>
     </a>
 
+    <!-- CARD 6 -->
     <a href="https://www.linkedin.com/feed/update/urn:li:activity:6" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-teal-200 to-cyan-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-certificate text-3xl text-cyan-600"></i>
-        <h3 class="text-xl font-bold">Achieved a Medal! 🏅 - GWEP by Gagan Deep Arora</h3>
+        <h3 class="text-xl font-bold">GWEP Medalist</h3>
       </div>
-      <p class="text-sm">This achievement is a testament to the hard work, dedication, and continuous learning that I strive to embody. It also inspires me to aim higher and contribute even more in the future.</p>
+      <p class="text-sm">Awarded by Gagan Deep Arora for consistent learning and excellence.</p>
     </a>
 
-    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_achievement-tradophileclub-bootcamp-activity-7259065210395664385-ICgG?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
+    <!-- CARD 7 -->
+    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_achievement-tradophileclub-bootcamp-activity-7259065210395664385-ICgG" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-orange-200 to-yellow-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-chart-bar text-3xl text-yellow-700"></i>
-        <h3 class="text-xl font-bold">Tradophile Club bootcamp Contribution Certification! </h3>
+        <h3 class="text-xl font-bold">Tradophile Bootcamp Certificate</h3>
       </div>
-      <p class="text-sm">I’ve received a certificate from the Tradophile Club for my contribution in the bootcamp as a coordinator in Technology and innovation Team</p>
+      <p class="text-sm">For coordinating Tech & Innovation at Tradophile Club Bootcamp.</p>
     </a>
 
-    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_frontenddeveloper-fullstackdeveloper-artificialintelligence-activity-7233474577304039425-UUY-?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
+    <!-- CARD 8 -->
+    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_frontenddeveloper-fullstackdeveloper-artificialintelligence-activity-7233474577304039425-UUY-" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-pink-200 to-orange-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-device-mobile text-3xl text-pink-600"></i>
-        <h3 class="text-xl font-bold">IBM - Internship Certification By CSR BOX</h3>
+        <h3 class="text-xl font-bold">IBM Internship by CSRBOX</h3>
       </div>
-      <p class="text-sm">Work as a Frontend Developer to generate User Responsive Design</p>
+      <p class="text-sm">Frontend Developer Intern focused on responsive design.</p>
     </a>
 
-    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_postman-api-fundamentals-student-expert-activity-7227300605101236224-nciI?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
+    <!-- CARD 9 -->
+    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_postman-api-fundamentals-student-expert-activity-7227300605101236224-nciI" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-lime-200 to-emerald-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-handshake text-3xl text-emerald-700"></i>
-        <h3 class="text-xl font-bold">Postman API fundamental Certification</h3>
+        <h3 class="text-xl font-bold">Postman API Certification</h3>
       </div>
-      <p class="text-sm">Earn a Badge to complete Api fundamental Flow Practically.</p>
+      <p class="text-sm">Badge earned after completing the API fundamentals course.</p>
     </a>
 
-    <!-- Bluestock Fintech Internship Card -->
-<div class="rounded-2xl bg-gradient-to-br from-violet-200 to-pink-200 p-6 text-gray-900 shadow-xl flex flex-col space-y-4">
-  
-  <!-- Internship Image -->
-  <img src="assets/assets/images/bluestock.jpeg" alt="Bluestock Fintech Internship" class="rounded-xl h-40 w-full object-cover shadow-md" />
-
-  <!-- Internship Title -->
-  <div class="flex items-center space-x-4">
-    <i class="ph ph-briefcase text-3xl text-violet-700"></i>
-    <h3 class="text-xl font-bold">Bluestock Fintech - Software Engineer Intern</h3>
-  </div>
-
-  <!-- Description -->
-  <p class="text-sm text-gray-800">
-    Contributed to scalable fintech product development, working on backend modules and real-time deployment during the internship.
-  </p>
-</div>
-
-
-<!-- View More on LinkedIn Card -->
-<a href="https://www.linkedin.com/in/anshika-singh-031b132a5/" target="_blank"
-   class="rounded-full w-40 h-40 flex flex-col justify-center items-center text-center bg-gradient-to-br from-pink-100 to-yellow-200 border-4 border-pink-400 shadow-xl hover:scale-105 transition duration-300 mx-auto mt-6">
-  <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Icon" class="w-14 h-14 mb-2" />
-  <span class="text-sm font-semibold text-pink-700">View More<br>on LinkedIn</span>
-</a>
-
+    <!-- CARD 10: Bluestock Internship -->
+    <div class="rounded-2xl bg-gradient-to-br from-violet-200 to-pink-200 p-6 text-gray-900 shadow-xl flex flex-col space-y-4">
+      <img src="assets/assets/images/bluestock.jpeg" alt="Bluestock Fintech Internship" class="rounded-xl h-40 w-full object-cover shadow-md" />
+      <div class="flex items-center space-x-4">
+        <i class="ph ph-briefcase text-3xl text-violet-700"></i>
+        <h3 class="text-xl font-bold">Bluestock Fintech - Software Engineer Intern</h3>
+      </div>
+      <p class="text-sm text-gray-800">Worked on backend modules and real-time deployment for fintech systems.</p>
+    </div>
   </section>
+
+  <!-- View More -->
+  <div class="flex justify-center mt-10">
+    <a href="https://www.linkedin.com/in/anshika-singh-031b132a5/" target="_blank"
+       class="rounded-full w-40 h-40 flex flex-col justify-center items-center text-center bg-gradient-to-br from-pink-100 to-yellow-200 border-4 border-pink-400 shadow-xl hover:scale-105 transition duration-300">
+      <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Icon" class="w-14 h-14 mb-2" />
+      <span class="text-sm font-semibold text-pink-700">View More<br>on LinkedIn</span>
+    </a>
+  </div>
 
   <!-- Footer -->
   <footer class="text-center py-6 border-t mt-10 bg-white">
