--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
 
   <!-- Header -->
   <header class="shadow-md py-4 bg-gray-950 sticky top-0 z-50">
-    <div class="container mx-auto px-4 flex justify-between items-center">
+    <div class="max-w-7xl mx-auto px-4 flex flex-wrap justify-between items-center">
       <h1 class="text-2xl font-bold text-cyan-400">Anshika Singh</h1>
-      <nav class="space-x-4 text-gray-300 font-medium">
+      <nav class="flex flex-wrap space-x-3 text-sm md:text-base text-gray-300 font-medium mt-2 md:mt-0">
         <a href="index.html" class="hover:text-cyan-400">Home</a>
         <a href="techstack.html" class="hover:text-cyan-400">Tech Stack</a>
         <a href="ml-projects.html" class="hover:text-cyan-400">ML Projects</a>
@@ -48,16 +48,16 @@
   </header>
 
   <!-- Contact Section -->
-  <section class="py-16 animate-slideUp">
-    <div class="container mx-auto px-4">
-      <h2 class="text-4xl font-extrabold text-center text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-blue-400 to-purple-400 mb-12">
+  <section class="py-16 px-4 animate-slideUp">
+    <div class="max-w-7xl mx-auto">
+      <h2 class="text-3xl md:text-4xl font-extrabold text-center text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-blue-400 to-purple-400 mb-12">
         📬 Let's Connect
       </h2>
 
-      <div class="grid md:grid-cols-2 gap-12 items-start">
+      <div class="grid gap-10 md:grid-cols-2 items-start">
 
         <!-- Contact Form -->
-        <form class="bg-gray-800 rounded-xl p-8 space-y-6 glow-card">
+        <form class="bg-gray-800 rounded-xl p-6 sm:p-8 space-y-6 glow-card">
           <div>
             <label class="block text-cyan-300 font-medium mb-2" for="name">Name</label>
             <input id="name" type="text" placeholder="Your name"
@@ -80,7 +80,7 @@
         </form>
 
         <!-- Contact Info -->
-        <div class="bg-gray-800 rounded-xl p-8 space-y-6 glow-card">
+        <div class="bg-gray-800 rounded-xl p-6 sm:p-8 space-y-6 glow-card">
           <h3 class="text-2xl font-bold text-cyan-300 mb-4">
             📞 Contact Info
           </h3>
@@ -90,7 +90,7 @@
           </div>
           <div class="flex items-start space-x-4">
             <i class="ph ph-envelope-simple text-xl text-cyan-400 mt-1"></i>
-            <p>anshika@example.com</p>
+            <p>anshika1104singh@gmail.com</p>
           </div>
           <div class="flex items-start space-x-4">
             <i class="ph ph-phone text-xl text-cyan-400 mt-1"></i>
@@ -98,15 +98,15 @@
           </div>
           <div class="flex items-start space-x-4">
             <i class="ph ph-github-logo text-xl text-cyan-400 mt-1"></i>
-            <a href="https://github.com/123anshi" class="text-cyan-300 hover:underline">GitHub Profile</a>
+            <a href="https://github.com/Anshika09Singh" class="text-cyan-300 hover:underline">GitHub Profile</a>
           </div>
           <div class="flex items-start space-x-4">
             <i class="ph ph-code text-xl text-yellow-400 mt-1"></i>
-            <a href="https://leetcode.com/your-leetcode-username" class="text-yellow-300 hover:underline">LeetCode Profile</a>
+            <a href="https://leetcode.com/u/Anshika09singh/" class="text-yellow-300 hover:underline">LeetCode Profile</a>
           </div>
           <div class="flex items-start space-x-4">
             <i class="ph ph-linkedin-logo text-xl text-blue-400 mt-1"></i>
-            <a href="https://linkedin.com/in/your-linkedin-handle" class="text-blue-300 hover:underline">LinkedIn Profile</a>
+            <a href="https://www.linkedin.com/in/anshika-singh-031b132a5/" class="text-blue-300 hover:underline">LinkedIn Profile</a>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="text-center py-6 border-t border-gray-700 bg-gray-950">
+  <footer class="text-center py-6 border-t border-gray-700 bg-gray-950 mt-10">
     <p class="text-gray-400">© 2025 Anshika Singh • Made with 💙 Tailwind CSS</p>
   </footer>
 
