--- a/techstack.html
+++ b/techstack.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tech Stack | Anshika</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
+  <!-- Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2" defer></script>
+
   <style>
     html {
       scroll-behavior: smooth;
@@ -25,11 +29,28 @@
 </head>
 
 <body class="bg-gradient-to-b from-purple-50 via-white to-blue-50 text-gray-800 font-sans">
+
   <!-- Header -->
-  <header class="shadow-md py-4 bg-white sticky top-0 z-50">
+  <header class="shadow-md py-4 bg-white sticky top-0 z-50" x-data="{ open: false }">
     <div class="container mx-auto px-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-blue-700">Anshika Singh</h1>
-      <nav class="space-x-4 text-gray-700 font-medium">
+
+      <!-- Hamburger Menu (mobile) -->
+      <button @click="open = !open" class="md:hidden text-gray-700 focus:outline-none">
+        <svg x-show="!open" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none"
+             viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+        <svg x-show="open" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none"
+             viewBox="0 0 24 24" stroke="currentColor" x-cloak>
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M6 18L18 6M6 6l12 12" />
+        </svg>
+      </button>
+
+      <!-- Desktop Nav -->
+      <nav class="hidden md:flex space-x-4 text-gray-700 font-medium">
         <a href="index.html" class="hover:text-blue-600">Home</a>
         <a href="techstack.html" class="text-blue-600 font-semibold underline">Tech Stack</a>
         <a href="ml-projects.html" class="hover:text-blue-600">ML Projects</a>
@@ -38,20 +59,30 @@
         <a href="contact.html" class="hover:text-blue-600">Contact</a>
       </nav>
     </div>
+
+    <!-- Mobile Nav -->
+    <div x-show="open" x-cloak class="md:hidden px-6 pb-4 pt-2 space-y-2 bg-white border-t">
+      <a href="index.html" class="block text-gray-700 hover:text-blue-600">Home</a>
+      <a href="techstack.html" class="block text-blue-600 font-semibold">Tech Stack</a>
+      <a href="ml-projects.html" class="block text-gray-700 hover:text-blue-600">ML Projects</a>
+      <a href="web-projects.html" class="block text-gray-700 hover:text-blue-600">Web Projects</a>
+      <a href="certificates.html" class="block text-gray-700 hover:text-blue-600">Certificates</a>
+      <a href="contact.html" class="block text-gray-700 hover:text-blue-600">Contact</a>
+    </div>
   </header>
 
   <!-- Section Title -->
-  <section class="text-center py-16">
+  <section class="text-center py-16 px-4">
     <h2 class="text-4xl font-extrabold text-purple-700 mb-4">💻 My Tech Stack</h2>
     <p class="text-lg text-gray-600 max-w-xl mx-auto">
       Tools and technologies I use to build intelligent and dynamic applications.
     </p>
   </section>
 
-  <!-- Sliding Tech Stack Section -->
-  <section class="slide-container">
-    <!-- ML Libraries -->
-    <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-blue-500 p-6">
+  <!-- Sliding Tech Stack Cards -->
+  <section class="slide-container overflow-x-auto">
+    <!-- Card Template (Repeat for Each Category) -->
+    <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-blue-500 p-6 min-w-[280px] sm:min-w-[320px]">
       <h3 class="text-xl font-bold mb-2 text-blue-700">ML Libraries</h3>
       <ul class="list-disc list-inside text-gray-700">
         <li>Scikit-Learn</li>
@@ -62,7 +93,6 @@
       </ul>
     </div>
 
-    <!-- AI -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-purple-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-purple-700">AI & Deep Learning</h3>
       <ul class="list-disc list-inside text-gray-700">
@@ -74,7 +104,6 @@
       </ul>
     </div>
 
-    <!-- Web Dev -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-green-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-green-700">Web Development</h3>
       <ul class="list-disc list-inside text-gray-700">
@@ -86,7 +115,6 @@
       </ul>
     </div>
 
-    <!-- Hosting -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-yellow-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-yellow-600">Databases & Hosting</h3>
       <ul class="list-disc list-inside text-gray-700">
@@ -98,7 +126,6 @@
       </ul>
     </div>
 
-    <!-- Tools -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-red-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-red-600">Tools & Platforms</h3>
       <ul class="list-disc list-inside text-gray-700">
@@ -110,7 +137,6 @@
       </ul>
     </div>
 
-    <!-- Languages -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-indigo-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-indigo-700">Languages</h3>
       <ul class="list-disc list-inside text-gray-700">
