--- a/certificates.html
+++ b/certificates.html
@@ -94,7 +94,7 @@
     </a>
 
     <!-- CARD 6 -->
-    <a href="https://www.linkedin.com/feed/update/urn:li:activity:6" target="_blank"
+    <a href="https://www.linkedin.com/posts/anshika-singh-031b132a5_achievement-proudmoment-gratitude-activity-7264570853005099008-ri-z?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEmreWUBXxWQUZJ22TiQqjSDQ3hamShzO8U" target="_blank"
        class="rounded-2xl card-hover bg-gradient-to-br from-teal-200 to-cyan-300 p-6 text-gray-900 shadow-xl">
       <div class="flex items-center space-x-4 mb-4">
         <i class="ph ph-certificate text-3xl text-cyan-600"></i>
