--- a/web-projects.html
+++ b/web-projects.html
@@ -114,7 +114,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-6 border-t border-gray-700 bg-gray-900">
-    <p class="text-gray-400">© 2025 Anshika Singh • Crafted with ❤️ + Tailwind</p>
+    <p class="text-gray-400">© 2025 Anshika Singh • Crafted with ❤️</p>
   </footer>
 </body>
 </html>
