--- a/techstack.html
+++ b/techstack.html
@@ -81,18 +81,21 @@
 
   <!-- Sliding Tech Stack Cards -->
   <section class="slide-container overflow-x-auto">
-    <!-- Card Template (Repeat for Each Category) -->
+
+    <!-- ML Libraries -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-blue-500 p-6 min-w-[280px] sm:min-w-[320px]">
       <h3 class="text-xl font-bold mb-2 text-blue-700">ML Libraries</h3>
       <ul class="list-disc list-inside text-gray-700">
+        <li>TensorFlow & Keras</li>
+        <li>Glow (Facebook ML)</li>
         <li>Scikit-Learn</li>
         <li>Pandas & NumPy</li>
         <li>Matplotlib & Seaborn</li>
-        <li>TensorFlow & Keras</li>
         <li>XGBoost</li>
       </ul>
     </div>
 
+    <!-- AI & Deep Learning -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-purple-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-purple-700">AI & Deep Learning</h3>
       <ul class="list-disc list-inside text-gray-700">
@@ -104,6 +107,7 @@
       </ul>
     </div>
 
+    <!-- Web Development -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-green-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-green-700">Web Development</h3>
       <ul class="list-disc list-inside text-gray-700">
@@ -115,6 +119,7 @@
       </ul>
     </div>
 
+    <!-- Databases & Hosting -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-yellow-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-yellow-600">Databases & Hosting</h3>
       <ul class="list-disc list-inside text-gray-700">
@@ -126,9 +131,12 @@
       </ul>
     </div>
 
+    <!-- Tools & Platforms -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-red-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-red-600">Tools & Platforms</h3>
       <ul class="list-disc list-inside text-gray-700">
+        <li>Docker</li>
+        <li>Zookeeper</li>
         <li>Git & GitHub</li>
         <li>Postman</li>
         <li>VS Code & Jupyter</li>
@@ -137,6 +145,7 @@
       </ul>
     </div>
 
+    <!-- Languages -->
     <div class="slide-item bg-white rounded-xl shadow-lg border-t-4 border-indigo-500 p-6">
       <h3 class="text-xl font-bold mb-2 text-indigo-700">Languages</h3>
       <ul class="list-disc list-inside text-gray-700">
@@ -147,6 +156,7 @@
         <li>SQL</li>
       </ul>
     </div>
+
   </section>
 
   <!-- Footer -->
