--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         ☰
       </button>
     </div>
-    <div id="mobileMenu" class="md:hidden hidden px-6 pb-4 text-sm text-gray-200">
-      <a href="#" class="block py-1 hover:text-cyan-400">Home</a>
-      <a href="techstack.html" class="block py-1 hover:text-cyan-400">Tech Stack</a>
-      <a href="ml-projects.html" class="block py-1 hover:text-cyan-400">ML Projects</a>
-      <a href="web-projects.html" class="block py-1 hover:text-cyan-400">Web Projects</a>
-      <a href="certificates.html" class="block py-1 hover:text-cyan-400">Certificates</a>
-      <a href="contact.html" class="block py-1 hover:text-cyan-400">Contact</a>
+    <div id="mobileMenu" class="md:hidden hidden px-6 pb-4 text-sm text-gray-200 bg-black/90">
+      <a href="#" class="block py-2 hover:text-cyan-400 border-b border-gray-700">Home</a>
+      <a href="techstack.html" class="block py-2 hover:text-cyan-400 border-b border-gray-700">Tech Stack</a>
+      <a href="ml-projects.html" class="block py-2 hover:text-cyan-400 border-b border-gray-700">ML Projects</a>
+      <a href="web-projects.html" class="block py-2 hover:text-cyan-400 border-b border-gray-700">Web Projects</a>
+      <a href="certificates.html" class="block py-2 hover:text-cyan-400 border-b border-gray-700">Certificates</a>
+      <a href="contact.html" class="block py-2 hover:text-cyan-400">Contact</a>
     </div>
   </header>
 
@@ -78,7 +78,7 @@
           A passionate developer blending <span class="text-purple-400 font-semibold">ML</span>, <span class="text-blue-400 font-semibold">AI</span>, and <span class="text-yellow-300 font-semibold">Web Development</span> using modern tools.
         </p>
         <p class="text-base text-gray-400 mb-4 leading-relaxed">
-          I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic.. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity.
+          I consistently submit my work on time and uphold a strong sense of responsibility and honesty in every project I take on. I focus on maintaining quality and meeting deadlines while staying true to my values and work ethic. I believe in delivering high-quality results through consistency and passion. I strive to bring ideas to life with creativity, innovation, and integrity.
         </p>
         <div class="flex flex-wrap gap-4">
           <a href="assets/assets/images/Anshika Singh final 1).pdf" target="_blank" class="px-6 py-3 rounded-full bg-pink-600 text-white hover:bg-pink-700 button-hover">📄 View Resume</a>
